2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* UnitTests.csproj: Update reference.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Track api
	  changes.

2009-07-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for "Bug 526667 - wrong code completion in object
	  initialisation (new O() {...};)".

2009-07-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Fixed
	  some unit tests.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/MSBuildTests.cs: Added test for bug
	  480813 - Referenced project with spaces/special characters
	  isn't saved or built properly

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Fix
	  warning.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* TestBase.cs: Set 2.0 as default target framework for the
	  tests.

2009-07-16  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Refactoring:
	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Added first
	  refactoring unit test for extract method.

2009-07-07  Mike Krüger  <mkrueger@novell.com>

	* TestBase.cs: Fixed unit tests.

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.Tests.DefaultEditActions\InsertNewLineTests.cs:
	  Make test work on windows.

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionTests.cs: Explicitly cast file
	  names to strings before checking equality.

	* Makefile.am:
	* UnitTests.csproj: use the internal copy of nunit for
	  building the tests.

2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/TestParser.cs:
	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Check count of
	  errors and warnings separately.
